--- a/workshops-frontend/package.json
+++ b/workshops-frontend/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^10.4.20",
     "flowbite-react": "^0.10.2",
     "postcss": "^8.4.47",
+    "posthog-js": "^1.257.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
