--- a/workshops-frontend/package.json
+++ b/workshops-frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "flowbite-react": "^0.10.2",
+    "lucide-react": "^0.539.0",
     "postcss": "^8.4.47",
     "posthog-js": "^1.257.0",
     "react": "^18.2.0",
